<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/createAccountFragment"
        android:name="com.example.mailapi.ui.fragments.CreateAccountFragment"
        android:label="@string/create_account"
        tools:layout="@layout/fragment_create_account" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.mailapi.ui.fragments.HomeFragment"
        android:label="@string/all_inboxes"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:launchSingleTop="false" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.mailapi.ui.fragments.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
        <action
            android:id="@+id/action_loginFragment_to_createAccountFragment"
            app:destination="@id/createAccountFragment" />
    </fragment>
</navigation>